# trent

./: .bumpversion.cfg  .gitignore  README.md  pyproject.toml
test/: coll_paired_test.py  coll_test.py  coll_transform_test.py
trent/: __init__.py  coll.py  concur.py  func.py  interface.py  linked_list.py
